# GKMS-Commu-AutoTL

./: .env.sample  .gitignore  AGENTS.md  Architecture.md  Models.py  README.md  TODO.txt  TranslatorGemini.py  character_styles.py  code_review_after_implement.md  code_review_plan.md  config.py  dictionary.py  formatting.py  process_excel_files.py  prompts.py  pyproject.toml  run.bat  text_utils.py  translate_excel.py  translator.py  translator_helper.py
.agents/: AGENTS.md  Architecture.md
.codex/: Plan.md  code_review_changelog.md  findings_first_review.txt  full_review_first.txt  iter2.txt  iter3.txt  state.txt
